--- a/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/controlFrame.fxml
+++ b/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/controlFrame.fxml
@@ -1,10 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import com.jfoenix.controls.JFXButton?>
-<?import com.jfoenix.controls.JFXComboBox?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -24,32 +23,32 @@
       <Separator layoutX="10.0" layoutY="128.0" prefWidth="200.0" />
       <Pane layoutX="10.0" layoutY="157.0" prefHeight="170.0" prefWidth="200.0" style="-fx-background-color: rgb(233,233,233); -fx-background-radius: 10px;">
          <children>
-            <ImageView fx:id="gameIcon" fitHeight="100.0" fitWidth="100.0" layoutX="50.0" layoutY="14.0" onMouseClicked="#gotoVersionList" onMouseEntered="#mcIconEnter" onMouseExited="#mcIconExit" pickOnBounds="true" preserveRatio="true">
-               <image>
-                  <Image url="@imgs/mc_icon.png" />
-               </image>
-            </ImageView>
-            <Label fx:id="gameVersion" alignment="CENTER" layoutX="35.0" layoutY="114.0" prefHeight="23.0" prefWidth="130.0" text="待选择" textAlignment="CENTER">
+            <Label fx:id="gameVersion" alignment="CENTER" layoutX="35.0" layoutY="119.0" prefHeight="23.0" prefWidth="130.0" text="待选择" textAlignment="CENTER">
                <font>
                   <Font name="Microsoft YaHei Bold" size="17.0" />
                </font>
             </Label>
-            <Label fx:id="gameCotitle" alignment="CENTER" layoutX="58.0" layoutY="137.0" prefHeight="18.0" prefWidth="85.0" text="待选择" textFill="#7c7b7b">
+            <Label fx:id="gameCotitle" alignment="CENTER" layoutX="58.0" layoutY="142.0" prefHeight="18.0" prefWidth="85.0" text="待选择" textFill="#7c7b7b">
                <font>
                   <Font name="Calibri" size="12.0" />
                </font>
             </Label>
+            <ImageView fx:id="gameIcon" fitHeight="70.0" fitWidth="70.0" layoutX="65.0" layoutY="11.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@imgs/mc_icon.png" />
+               </image>
+            </ImageView>
+            <ComboBox fx:id="versionList" layoutX="25.0" layoutY="90.0" prefWidth="150.0" />
          </children>
       </Pane>
       <Pane layoutX="10.0" layoutY="14.0" prefHeight="100.0" prefWidth="200.0" style="-fx-background-color: rgb(233,233,233); -fx-background-radius: 10px;">
          <children>
-            <JFXComboBox fx:id="characterChooser" layoutX="10.0" layoutY="57.0" onAction="#flushImage" prefHeight="25.0" prefWidth="130.0" />
-            <ImageView fx:id="headTexture" fitHeight="50.0" fitWidth="50.0" layoutX="50.0" pickOnBounds="true" preserveRatio="true" />
-            <JFXButton buttonType="RAISED" layoutX="151.0" layoutY="57.0" onAction="#gotoUserCreator" text="＋">
-               <tooltip>
-                  <Tooltip text="添加账户" />
-               </tooltip>
-            </JFXButton>
+            <ImageView fx:id="headTexture" fitHeight="50.0" fitWidth="50.0" layoutX="75.0" layoutY="6.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../../../../../../../Launcher/src/main/resources/com/Sparrow/imgs/Steve_Head.png" />
+               </image></ImageView>
+            <ComboBox fx:id="characterChooser" layoutX="10.0" layoutY="66.0" onAction="#flushImage" prefHeight="23.0" prefWidth="143.0" />
+            <Button layoutX="161.0" layoutY="66.0" mnemonicParsing="false" onAction="#gotoUserCreator" text="+" />
          </children>
       </Pane>
    </children>
