--- a/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/mainFrame.fxml
+++ b/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/mainFrame.fxml
@@ -32,7 +32,6 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import com.jfoenix.controls.JFXButton?>
 <?import com.jfoenix.controls.JFXListView?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
@@ -49,15 +48,10 @@
 <?import javafx.scene.paint.Color?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="625.0" prefWidth="700.0" style="-fx-border-radius: 10px 10px 0px 0px;" stylesheets="@bootstrap3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.controller.launcherUI_JavaFX_Controller">
+<VBox fx:id="root" prefHeight="625.0" prefWidth="700.0" style="-fx-border-radius: 10px 10px 0px 0px;" stylesheets="@bootstrap3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.Sparrow.UI.JavaFX.controller.launcherUI_JavaFX_Controller">
     <children>
-        <Pane prefHeight="45.0" prefWidth="900.0" style="-fx-background-color: #CFF1FF;">
+        <Pane prefHeight="45.0" prefWidth="900.0">
             <children>
-                <Label alignment="CENTER" layoutX="306.0" layoutY="7.0" text="Sparrow" textAlignment="CENTER">
-                    <font>
-                        <Font name="Calibri" size="26.0" />
-                    </font>
-                </Label>
                 <ImageView fx:id="closeButton" fitHeight="15.0" fitWidth="15.0" layoutX="671.0" layoutY="15.0" onMouseClicked="#closeWindow" onMouseEntered="#windowButtonActive" onMouseExited="#windowButtonCancel" pickOnBounds="true" preserveRatio="true">
                     <image>
                         <Image url="@imgs/WindowCloseButton.png" />
@@ -76,12 +70,11 @@
             </Pane>
             </children>
         </Pane>
-      <Pane prefHeight="555.0" prefWidth="700.0" style="-fx-background-color: #CFF1FF;">
+      <Pane prefHeight="555.0" prefWidth="700.0">
          <children>
-            <Pane fx:id="pagePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="220.0" style="-fx-background-color: #CFF1FF;" />
-                 <Pane fx:id="launchPane" layoutX="230.0" prefHeight="555.0" prefWidth="470.0" style="-fx-background-color: #CFF1FF;">
+            <Pane fx:id="pagePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="220.0" />
+                 <Pane fx:id="launchPane" layoutX="230.0" prefHeight="555.0" prefWidth="470.0">
                      <children>
-                  <JFXButton buttonType="RAISED" layoutX="327.0" layoutY="513.0" onAction="#launch" prefHeight="30.0" prefWidth="100.0" ripplerFill="#cff1ff" text="启动游戏" />
                   <ScrollPane layoutX="25.0" layoutY="227.0" prefHeight="188.0" prefWidth="420.0" style="-fx-background-color: #88A6B3; -fx-hbar-policy: NEVER; -fx-background-radius: 10px; -fx-border-radius: 10px;">
                      <content>
                               <VBox prefHeight="500.0" prefWidth="420.0" spacing="20.0">
@@ -111,6 +104,7 @@
                               </VBox>
                      </content>
                   </ScrollPane>
+                  <Button layoutX="381.0" layoutY="513.0" mnemonicParsing="false" onAction="#launch" text="启动游戏" />
                      </children>
                  </Pane>
             <Separator layoutX="215.0" layoutY="8.0" orientation="VERTICAL" prefHeight="540.0" prefWidth="10.0" />
