--- a/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/mainFrame.fxml
+++ b/UI_JavaFX/src/main/resources/com/Sparrow/UI/JavaFX/mainFrame.fxml
@@ -32,13 +32,18 @@
   OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
 -->
 
-<?import com.jfoenix.controls.JFXListView?>
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXToggleButton?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.Separator?>
-<?import javafx.scene.control.TitledPane?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToggleButton?>
+<?import javafx.scene.control.ToggleGroup?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -73,41 +78,20 @@
       <Pane prefHeight="555.0" prefWidth="700.0">
          <children>
             <Pane fx:id="pagePane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="220.0" />
-                 <Pane fx:id="launchPane" layoutX="230.0" prefHeight="555.0" prefWidth="470.0">
-                     <children>
-                  <ScrollPane layoutX="25.0" layoutY="227.0" prefHeight="188.0" prefWidth="420.0" style="-fx-background-color: #88A6B3; -fx-hbar-policy: NEVER; -fx-background-radius: 10px; -fx-border-radius: 10px;">
-                     <content>
-                              <VBox prefHeight="500.0" prefWidth="420.0" spacing="20.0">
-                                  <opaqueInsets>
-                                      <Insets />
-                                  </opaqueInsets>
-                                  <children>
-                                        <TitledPane animated="false" prefWidth="420.0" text="存档">
-                                            <content>
-                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="420.0">
-                                                    <children>
-                                                        <JFXListView fx:id="gameSaves" layoutX="-1.0" prefWidth="420.0" style="-fx-fixed-cell-size: 70px;" />
-                                                    </children>
-                                                </AnchorPane>
-                                            </content>
-                                        </TitledPane>
-                                        <TitledPane animated="false" prefWidth="420.0" text="模组">
-                                            <content>
-                                                <AnchorPane minHeight="0.0" minWidth="0.0" prefWidth="420.0">
-                                                    <children>
-                                                        <JFXListView fx:id="gameMods" layoutX="-1.0" prefWidth="420.0" />
-                                                    </children>
-                                                </AnchorPane>
-                                            </content>
-                                        </TitledPane>
-                                  </children>
-                              </VBox>
-                     </content>
-                  </ScrollPane>
-                  <Button layoutX="381.0" layoutY="513.0" mnemonicParsing="false" onAction="#launch" text="启动游戏" />
-                     </children>
-                 </Pane>
             <Separator layoutX="215.0" layoutY="8.0" orientation="VERTICAL" prefHeight="540.0" prefWidth="10.0" />
+            <TabPane fx:id="tabPane" layoutX="225.0" prefHeight="555.0" prefWidth="475.0" tabClosingPolicy="UNAVAILABLE">
+              <tabs>
+                <Tab fx:id="lunchTab" closable="false" text="启动">
+                  <content>
+                    <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                           <children>
+                              <JFXButton buttonType="RAISED" layoutX="384.0" layoutY="474.0" onAction="#launch" ripplerFill="#45d026" text="启动游戏" />
+                           </children>
+                        </AnchorPane>
+                  </content>
+                </Tab>
+              </tabs>
+            </TabPane>
          </children>
       </Pane>
         <HBox id="HBox" alignment="CENTER_LEFT" prefHeight="20.0" spacing="5.0" VBox.vgrow="NEVER">
